{
    "name": "PuzzleInputAction",
    "maps": [
        {
            "name": "PuzzleMap",
            "id": "9317c4ec-2fd4-41bf-a4d9-48a4145764ce",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "953c5f09-ef91-4a7d-a858-a74fec02a495",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "ecf46d75-23e4-4255-902d-ae43faae6581",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "ef4fba90-8b09-4b42-bfb5-e6606c18855c",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "2fcef4e5-37c8-47e3-94cd-6de2162ea06b",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "7dcd9834-0380-483b-8dd8-93e3ec2ae2ea",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "26d39029-f682-461c-bee5-ca59f5da7943",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}